# fesnuk-be-rust

./: .env  .env.example  .gitignore  Cargo.toml  diesel.toml  handler
migrations/: 20251005233956_create_updated_at_trigger_function.sql  20251005234012_create_nooks.sql  20251005234029_create_posts.sql  20251005234046_create_comments.sql
migrations/2025-09-23-080636-0000_create_updated_at_trigger_function/: down.sql  up.sql
migrations/2025-09-23-121317-0000_create_nooks/: down.sql  up.sql
migrations/2025-09-23-121903-0000_create_posts/: down.sql  up.sql
migrations/2025-09-30-043037-0000_create_comments/: down.sql  up.sql
src/: lib.rs  listener.rs  main.rs  routes.rs  schema.rs
src/app/: mod.rs
src/app/comment/: mod.rs
src/app/comment/controllers/: mod.rs
src/app/comment/dto/: mod.rs
src/app/comment/models/: mod.rs
src/app/comment/repositories/: mod.rs
src/app/comment/services/: mod.rs
src/app/nook/: mod.rs
src/app/nook/controllers/: mod.rs
src/app/nook/dto/: mod.rs
src/app/nook/models/: mod.rs
src/app/nook/repositories/: mod.rs
src/app/nook/services/: mod.rs
src/app/post/controllers/: mod.rs
src/app/post/dto/: mod.rs
src/app/post/models/: mod.rs
src/app/post/repositories/: mod.rs
src/app/post/services/: mod.rs
src/db/: mod.rs
src/utils/: response.rs
v1/: function.json
