[package]
name = "fesnuk"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = {version = "0.4.42", features = ["serde"]}
diesel = {version = "2.3.2", features = ["postgres", "chrono", "r2d2"]}
dotenvy = "0.15.7"
serde = {version = "1.0.225", features = ["derive"]}
serde_json = "1.0.145"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
